--- a/YogshalaAndroid/app/src/main/res/layout/activity_main.xml
+++ b/YogshalaAndroid/app/src/main/res/layout/activity_main.xml
@@ -13,155 +13,200 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp">
+            >
 
-            <TextView
-                android:id="@+id/textView"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
 
-                android:text="Sahyadri Iyengar Yogshala"
-                android:textColor="@color/darker_blue"
-                android:textSize="26sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:adjustViewBounds="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+
+                app:srcCompat="@drawable/background_banner" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="179dp"
+
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/appicon"
 
                 />
 
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="130dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/banner_bg">
-
-                <TextView
-                    android:id="@+id/textViewSaving"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+
+
+                    android:layout_marginBottom="8dp"
+
+                    android:elevation="3dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/imageView">
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="130dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginStart="16dp"
-                    android:textAlignment="center"
-                    android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
+                    android:background="@drawable/banner_bg">
 
-                    android:text="Student Count"
-                    android:textColor="@color/darker_blue"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/textViewSaving"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:textAlignment="center"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="16dp"
 
-                <TableLayout
-                    android:id="@+id/table"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/textViewSaving"
-                    android:layout_marginTop="10dp"
+                        android:text="Student Count"
+                        android:textColor="@color/darker_blue"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
 
-                    android:paddingHorizontal="10dp"
+                    <TableLayout
+                        android:id="@+id/table"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/textViewSaving"
+                        android:layout_marginTop="10dp"
 
-                    >
+                        android:paddingHorizontal="10dp"
 
-                    <TableRow>
+                        >
 
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:background="@drawable/borders"
-                            android:gravity="center"
-                            android:padding="5dp"
-                            android:text="Total"
-                            android:textColor="@color/darker_blue"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
+                        <TableRow>
 
-
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:background="@drawable/borders"
-                            android:gravity="center"
-                            android:padding="5dp"
-                            android:text="Joined"
-                            android:textColor="@color/darker_blue"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:background="@drawable/borders"
-                            android:gravity="center"
-                            android:padding="5dp"
-                            android:text="Left"
-                            android:textColor="@color/darker_blue"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
-
-
-                    </TableRow>
-
-                    <TableRow>
-
-                        <TextView
-                            android:id="@+id/totalTV"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:background="@drawable/borders"
-                            android:gravity="center"
-                            android:padding="5dp"
-                            android:text="0"
-                            android:textColor="@color/darker_blue"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:background="@drawable/borders"
+                                android:gravity="center"
+                                android:padding="5dp"
+                                android:text="Total"
+                                android:textColor="@color/darker_blue"
+                                android:textSize="12sp"
+                                android:textStyle="bold" />
 
 
 
-                        <TextView
-                            android:id="@+id/joinedTV"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:background="@drawable/borders"
-                            android:gravity="center"
-                            android:padding="5dp"
-                            android:text="0"
-                            android:textColor="@color/darker_blue"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:background="@drawable/borders"
+                                android:gravity="center"
+                                android:padding="5dp"
+                                android:text="Joined"
+                                android:textColor="@color/darker_blue"
+                                android:textSize="12sp"
+                                android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/leftTV"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:background="@drawable/borders"
-                            android:gravity="center"
-                            android:padding="5dp"
-                            android:text="0"
-                            android:textColor="@color/darker_blue"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:background="@drawable/borders"
+                                android:gravity="center"
+                                android:padding="5dp"
+                                android:text="Left"
+                                android:textColor="@color/darker_blue"
+                                android:textSize="12sp"
+                                android:textStyle="bold" />
 
 
-                    </TableRow>
-                </TableLayout>
+                        </TableRow>
+
+                        <TableRow>
+
+                            <TextView
+                                android:id="@+id/totalTV"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:background="@drawable/borders"
+                                android:gravity="center"
+                                android:padding="5dp"
+                                android:text="0"
+                                android:textColor="@color/darker_blue"
+                                android:textSize="12sp"
+                                android:textStyle="bold" />
 
 
-            </RelativeLayout>
+
+                            <TextView
+                                android:id="@+id/joinedTV"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:background="@drawable/borders"
+                                android:gravity="center"
+                                android:padding="5dp"
+                                android:text="0"
+                                android:textColor="@color/darker_blue"
+                                android:textSize="12sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/leftTV"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:background="@drawable/borders"
+                                android:gravity="center"
+                                android:padding="5dp"
+                                android:text="0"
+                                android:textColor="@color/darker_blue"
+                                android:textSize="12sp"
+                                android:textStyle="bold" />
+
+
+                        </TableRow>
+                    </TableLayout>
+
+
+                </RelativeLayout>
+                </LinearLayout>
+
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
             <RelativeLayout
                 android:id="@+id/feesDueRL"
                 android:layout_width="match_parent"
                 android:layout_height="140dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:background="@drawable/banner_bg">
 
                 <TextView
@@ -388,6 +433,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="26dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:orientation="horizontal">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -523,7 +570,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="26dp"
-
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:orientation="horizontal"
 
                 >
@@ -642,7 +690,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="7dp"
-                        android:text="Fees Due"
+                        android:text="Report"
                         android:textColor="@color/darker_blue"
                         android:textSize="17sp"
 
